correções classe entrega, ajustes dto, service controller, classe movimentação correção nas buscas do repository